--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
+    "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.9"
   }
